<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gms_settings_name">Vanced+ microG</string>
    <string name="gms_settings_summary">Setup Vanced+ microG.</string>

    <string name="just_a_sec">Just a sec…</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="sorry">Sorry…</string>
    <string name="auth_before_connect">"An app on your device is trying to sign in to a Google account.

If this was intentional, use the <b>Sign in</b> (or <b>Huawei</b>, if you have a device with this brand) button to connect to Google’s sign-in page."</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_connecting">"Establishing a connection to Google’s servers to sign you in.

This can take a few seconds."</string>
    <string name="no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network."</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later."</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes."</string>

    <string name="perm_status_broadcast_label">listen to internal status broadcasts</string>
    <string name="perm_c2dm_receive_label">listen to C2DM messages</string>
    <string name="perm_c2dm_send_label">send C2DM messages to other apps</string>
    <string name="perm_gtalk_svc_label">exchange messages and receive sync notifications from Google servers</string>
    <string name="perm_extended_access_label">Extended access to Google services</string>
    <string name="google_account_manager">Google Account Manager not fully implemented</string>
    <string name="manage_google_account">Manage your Google account</string>
    <string name="manage_google_account_summary">Manage your Google account information</string>
    <string name="manage_yt_activities">Manage YouTube activities</string>
    <string name="manage_yt_activities_summary">Manage YouTube activities such as watch or search history</string>
    <string name="source_code">View source code</string>
    <string name="source_code_summary">View project source code on GitHub</string>


    <string name="service_name_checkin">Google device registration</string>
    <string name="service_name_mcs">Cloud Messaging</string>

    <string name="service_status_enabled_short">On</string>
    <string name="service_status_disabled_short">Off</string>

    <string name="menu_advanced">Advanced</string>
    <string name="list_no_item_none">None</string>
    <string name="list_item_see_all">See all</string>

    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_other">Other networks</string>

    <!-- Settings strings -->

    <string name="prefcat_about">About</string>
    <string name="prefcat_google_services">Google Services</string>
    <string name="pref_more_settings">More</string>

    <string name="checkin_not_registered">Not registered</string>
    <string name="checkin_last_registration">Last registration: <xliff:g example="Yesterday, 02:20 PM">%1$s</xliff:g></string>

    <string name="prefs_account">Account preferences</string>
    <string name="prefs_account_privacy">Personal info &amp; privacy</string>
    <string name="prefs_account_security">Sign-in &amp; security</string>

    <string name="pref_auth_trust_google_title">Trust Google for app permissions</string>
    <string name="pref_auth_trust_google_summary">When disabled, the user is asked before an apps authorization request is sent to Google. Some applications will fail to use the Google account if this is disabled.</string>
    <string name="pref_auth_visible_title">Allow apps to find accounts</string>
    <string name="pref_auth_visible_summary">When enabled, all applications on this device will be able to see email address of your Google Accounts without prior authorization.</string>

    <string name="pref_add_account_title">Account</string>
    <string name="pref_add_account_summary">Add Google account</string>
    <string name="pref_gcm_switcher_title">Receive push notifications</string>
    <string name="pref_gcm_enable_mcs_summary">Cloud Messaging is a push notification provider used by many third-party applications. To use it you must enable device registration.</string>

    <string name="pref_about_title">About Vanced+ microG</string>
    <string name="hideLauncherIcon">Hide icon from launcher</string>

    <string name="brand_spoof_button">Huawei</string>

    <string name="pref_switcher_title">Register device</string>
    <string name="pref_checkin_enable_summary">Registers your device to Google services and creates a unique device identifier. Vanced+ microG strips identifying bits other than your Google account name from registration data.</string>
    <string name="pref_device_registration_android_id">Android ID</string>
    <string name="pref_info_status">Status</string>

    <string name="gcm_status_pref_default">Default</string>
    <string name="gcm_status_pref_manual">Manual</string>
    <string name="gcm_status_pref_sec">seconds</string>
    <string name="gcm_status_pref_min">minutes</string>
    <string name="gcm_unregister_app">Unregister</string>
    <string name="gcm_no_message_yet">No messages received so far</string>
    <string name="gcm_last_message_at">Last message: <xliff:g example="Yesterday, 02:20 PM">%1$s</xliff:g></string>
    <string name="gcm_registered">Registered</string>
    <string name="gcm_registered_since">Registered since: <xliff:g example="Yesterday, 02:20 PM">%1$s</xliff:g></string>
    <string name="gcm_unregister_confirm_title">Unregister <xliff:g example="F-Droid">%1$s</xliff:g>?</string>
    <string name="gcm_unregister_confirm_message">Some apps do not automatically re-register and/or do not provide an option to do so manually. These apps might not work correctly after unregistering.\nContinue?</string>
    <string name="gcm_unregister_after_deny_message">You denied an app to register for push notifications that is already registered.\nDo you want to unregister it now so it does not receive push messages in the future?</string>
    <string name="gcm_messages_counter">Messages: <xliff:g example="123">%1$d</xliff:g> (<xliff:g example="12345">%2$d</xliff:g> bytes)</string>
    <string name="gcm_network_state_disconnected">Disconnected</string>
    <string name="gcm_network_state_connected">Connected since <xliff:g example="2 hours ago">%1$s</xliff:g></string>

    <string name="pref_push_app_allow_register_title">Allow registration</string>
    <string name="pref_push_app_allow_register_summary">Allow the app to register for push notifications.</string>
    <string name="pref_push_app_wake_for_delivery_title">Start app on push message</string>
    <string name="pref_push_app_wake_for_delivery_summary">Start the app while in background to receive the incoming push messages.</string>
    <string name="prefcat_status_title">Status</string>
    <string name="prefcat_push_apps_title">Apps using push notifications</string>
    <string name="prefcat_push_apps_registered_title">Registered apps</string>
    <string name="prefcat_push_apps_unregistered_title">Unregistered apps</string>
    <string name="prefcat_push_networks_title">Networks to use for push notifications</string>

    <string name="device_profile_name">Device profile</string>
    <string name="profile_name">Select profile</string>
    <string name="profile_name_native">Native</string>
    <string name="profile_name_real">Real</string>
    <string name="profile_name_user">Custom: %s</string>
    <string name="profile_name_auto">Automatic: %s</string>
    <string name="profile_name_system">System: %s</string>
    <string name="import_profile_name">Import custom profile</string>
    <string name="import_profile_summary">Import device profile from file</string>
    <string name="serial_name">Serial</string>
    <string name="url_link">https://github.com/cuynu/VancedxMicroG</string>
    <string name="delete_account_summary">To remove signed in Google account, go to Device Settings -> Account.</string>
    <string name="tg_groups">https://t.me/ytvancedxupdates</string>
    <string name="discord">https://discord.gg/FXAe2eE7mx</string>
    <string name="check_for_vanced_microg_updates_on_github">Check for Vanced+ microG updates on GitHub</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="checkupdate_url">https://github.com/cuynu/VancedxMicroG/releases</string>
    <string name="network_google_enabled_string">If disabled, all connections to Google servers usually done by microG will be denied. This overrides service specific settings.</string>
    <string name="network_google_enabled_summary">Allow connecting to Google servers</string>
    <string name="network_google_use_tor">Requires Orbot to be installed\nNot yet supported</string>
    <string name="network_google_use_tor_summary">Connect to Google via Tor network</string>
    <string name="fake_signature_summary">Spoofs signature key of Vanced+ microG to fix YouTube Vanced+ playback buffering issue</string>
    <string name="fake_signature_title">Spoof app signature key (EXPERIMENTAL)</string>
    <string name="build_date">Build date</string>
    <string name="your_data_in_youtube">Your data in YouTube</string>
    <string name="your_data_in_youtube_summary">Browse or delete your YouTube activity, and discover how your data makes YouTube and other Google services work better for you</string>
    <string name="remove_google_account_tips">Want to remove your Google account from Vanced+ microG?</string>
    <string name="remove_google_account_summary"><![CDATA[Go to your device settings -> Account to remove them.]]></string>
</resources>
