<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/account_manager_title">
        <Preference
            android:title="@string/manage_google_account"
            android:summary="@string/manage_google_account_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://myaccount.google.com"/>
        </Preference>
        <Preference
            android:title="@string/manage_yt_activities"
            android:summary="@string/manage_yt_activities_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://myactivity.google.com/product/youtube"/>
        </Preference>
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auth_manager_trust_google"
            android:summary="@string/pref_auth_trust_google_summary"
            android:title="@string/pref_auth_trust_google_title"/>
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auth_manager_visible"
            android:summary="@string/pref_auth_visible_summary"
            android:title="@string/pref_auth_visible_title"/>
    </PreferenceCategory>

    <Preference
        android:selectable="false"
        android:summary="@string/google_account_manager"/>
</PreferenceScreen>