<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_more_settings">
        <Preference
            android:icon="@drawable/ic_device_login"
            android:title="@string/check_for_updates"
            android:summary="@string/check_for_vanced_microg_updates_on_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/checkupdate_url" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_info_outline"
            android:title="YouTube Vanced+ Telegram channel"
            android:summary="Come here with us :)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/tg_groups" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_info_outline"
            android:title="YouTube Vanced+ Discord server"
            android:summary="Come here with us :)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/discord" />
        </Preference>
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:enabled="true"
        android:key="network_google_enabled"
        android:summary="@string/network_google_enabled_string"
        android:title="@string/network_google_enabled_summary"/>
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:enabled="false"
        android:summary="@string/fake_signature_summary"
        android:title="@string/fake_signature_title"/>
    <Preference
        android:selectable="false"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/build_date"
        android:summary="put your build date here :)"/>
    </PreferenceCategory>
</PreferenceScreen>
